[package]
name = "container-stress"
version = "0.1.0"
authors = ["Randolph Kahle <randy@doit-intl.com>"]
#edition = "2021"
edition="2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#structopt = "0.3.13"
#rand = "0.8"
log = "0.4.14"
env_logger = "0.9.0"
signal-hook = "0.3.10"
